# docs/swagger.json
@@ -3,5 +3,534 @@
     "info": {
         "contact": {}
     },
-    "paths": {}
+    "paths": {
+        "/products": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "상품 목록을 조회합니다.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "상품 목록 조회",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "커서",
+                        "name": "cursor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "검색어",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "상품 목록",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ListProductsResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "필수 항목을 입력하여 상품을 생성합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "상품 생성",
+                "parameters": [
+                    {
+                        "description": "상품 생성 요청",
+                        "name": "CreateProductRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "특정 상품 ID로 상품을 전체 또는 부분 수정합니다. (단 자신의 상품만 수정 가능)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "전체 또는 부분 상품 수정",
+                "parameters": [
+                    {
+                        "description": "상품 수정 요청",
+                        "name": "PatchProductRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.PatchProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/products/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "상품 ID로 상품을 조회합니다. (단 자신의 상품만 조회 가능)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "단일 상품 조회",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "상품 ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "상품 상세 정보",
+                        "schema": {
+                            "$ref": "#/definitions/domain.GetProductResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "상품 ID로 상품을 삭제합니다. (단 자신의 상품만 삭제 가능)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "상품 삭제",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "제품 ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/users": {
+            "post": {
+                "description": "사장님은 휴대폰 번호와 비밀번호로 회원가입을 합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "회원가입",
+                "parameters": [
+                    {
+                        "description": "회원가입 요청",
+                        "name": "CreateUserRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/users/login": {
+            "post": {
+                "description": "휴대폰 번호와 비밀번호로 로그인합니다. 예시 휴대폰번호: 01012345678, 비밀번호: 1234은 init.sql에서 등록 되어 있습니다. (더미 상품 바인딩용)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "로그인",
+                "parameters": [
+                    {
+                        "description": "로그인 요청",
+                        "name": "LoginUserRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.LoginUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.LoginUserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/logout": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "엑세스 토큰을 비활성화하고 로그아웃 처리합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "로그아웃",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "domain.CreateProductRequest": {
+            "type": "object",
+            "required": [
+                "barcode",
+                "category",
+                "cost",
+                "description",
+                "expiryDate",
+                "name",
+                "price",
+                "size"
+            ],
+            "properties": {
+                "barcode": {
+                    "type": "string",
+                    "example": "25611234"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "payhere"
+                },
+                "cost": {
+                    "type": "number",
+                    "example": 500
+                },
+                "description": {
+                    "type": "string",
+                    "example": "슈크림 라떼 팔아요"
+                },
+                "expiryDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "슈크림 라떼"
+                },
+                "price": {
+                    "type": "number",
+                    "example": 1000
+                },
+                "size": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.ProductSizeType"
+                        }
+                    ],
+                    "example": "large"
+                }
+            }
+        },
+        "domain.CreateUserRequest": {
+            "type": "object",
+            "required": [
+                "mobileID",
+                "password"
+            ],
+            "properties": {
+                "mobileID": {
+                    "type": "string",
+                    "example": "01012345678"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "1234"
+                }
+            }
+        },
+        "domain.GetProductResponse": {
+            "type": "object",
+            "properties": {
+                "product": {
+                    "$ref": "#/definitions/domain.ProductDTO"
+                }
+            }
+        },
+        "domain.ListProductsResponse": {
+            "type": "object",
+            "properties": {
+                "cursor": {
+                    "type": "integer"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.ProductDTO"
+                    }
+                }
+            }
+        },
+        "domain.LoginUserRequest": {
+            "type": "object",
+            "required": [
+                "mobileID",
+                "password"
+            ],
+            "properties": {
+                "mobileID": {
+                    "type": "string",
+                    "example": "01012345678"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "1234"
+                }
+            }
+        },
+        "domain.LoginUserResponse": {
+            "type": "object",
+            "required": [
+                "accessToken",
+                "expiresIn"
+            ],
+            "properties": {
+                "accessToken": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3MDg4ODgxOTIsInVzZXJJRCI6MX0.WVQGpeNbCpWSKuvYO7rFv6HoXaEA4_VQZSl7oMhmROk"
+                },
+                "expiresIn": {
+                    "type": "integer",
+                    "example": 1708888192
+                }
+            }
+        },
+        "domain.PatchProductRequest": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "barcode": {
+                    "type": "string",
+                    "example": "25611234"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "payhere"
+                },
+                "cost": {
+                    "type": "number",
+                    "example": 500
+                },
+                "description": {
+                    "type": "string",
+                    "example": "슈크림 라떼 팔아요"
+                },
+                "expiryDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "슈크림 라떼"
+                },
+                "price": {
+                    "type": "number",
+                    "example": 1000
+                },
+                "size": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.ProductSizeType"
+                        }
+                    ],
+                    "example": "large"
+                }
+            }
+        },
+        "domain.ProductDTO": {
+            "type": "object",
+            "required": [
+                "barcode",
+                "category",
+                "cost",
+                "createDate",
+                "description",
+                "expiryDate",
+                "id",
+                "initial",
+                "name",
+                "price",
+                "size",
+                "updateDate",
+                "userID"
+            ],
+            "properties": {
+                "barcode": {
+                    "type": "string",
+                    "example": "25611234"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "payhere"
+                },
+                "cost": {
+                    "type": "number",
+                    "example": 500
+                },
+                "createDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "슈크림 라떼 팔아요"
+                },
+                "expiryDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "initial": {
+                    "type": "string",
+                    "example": "ㅅㅋㄹ ㄹㄸ"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "슈크림 라떼"
+                },
+                "price": {
+                    "type": "number",
+                    "example": 1000
+                },
+                "size": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.ProductSizeType"
+                        }
+                    ],
+                    "example": "large"
+                },
+                "updateDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "userID": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "domain.ProductSizeType": {
+            "type": "string",
+            "enum": [
+                "small",
+                "large"
+            ],
+            "x-enum-varnames": [
+                "ProductSizeTypeSmall",
+                "ProductSizeTypeLarge"
+            ]
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
